# Hodgkin-Huxley-Model

./: CMakeLists.txt  README.md  ern.cpp  ern.h  global_variables.h  hhn.cpp  hhn.h  in.h  main.cpp  matrixf.cpp  matrixf.h  pinkn.cpp  pinkn.h  regular_net.cpp
include/: ern.h  global_variables.h  hhn.h  in.h  pinknumber.h  regular_net.h
src/: ern.cpp  hhn.cpp  main.cpp  pinknumber.cpp  regular_net.cpp
